[tool.poetry]
name = "leine-lyd-plan"
version = "0.1.0"
description = ""
authors = ["Kelvin Sundli <kelvin.sundli@gmail.com>", "Joachim Leine <joachim@leine.guru>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
streamlit = "^1.8.1"
watchdog = "^2.1.7"
pre-commit = "^2.18.1"
pandas = "^1.4.2"
spotipy = "^2.19.0"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
